RESOLVED FIXED36524
[Chromium] Bad VKEY_F10, VKEY_F11 translation in WebInputEvent.cpp
https://bugs.webkit.org/show_bug.cgi?id=36524
Summary [Chromium] Bad VKEY_F10, VKEY_F11 translation in WebInputEvent.cpp
Alexander Pavlov (apavlov)
Reported 2010-03-24 05:22:04 PDT
VKEY_F10 gets translated to "F11", VKEY_F11 has no translation which implicitly maps it into "U+005A"
Attachments
[PATCH] Proposed solution (1.00 KB, patch)
2010-03-24 05:28 PDT, Alexander Pavlov (apavlov)
pfeldman: review+
apavlov: commit-queue+
Alexander Pavlov (apavlov)
Comment 1 2010-03-24 05:28:38 PDT
Created attachment 51488 [details] [PATCH] Proposed solution
Alexander Pavlov (apavlov)
Comment 2 2010-03-24 08:48:31 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebKit/chromium/ChangeLog M WebKit/chromium/src/WebInputEvent.cpp Committed r56442
Note You need to log in before you can comment on or make changes to this bug.