2010-03-24  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        [Chromium] Fix VKEY_F10, VKEY_F11 translation in WebInputEvent.cpp
        https://bugs.webkit.org/show_bug.cgi?id=36524

        * src/WebInputEvent.cpp:
        (WebKit::staticKeyIdentifiers):



Canonical link: https://commits.webkit.org/47736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56442 268f45cc-cd09-0410-ab3c-d52691b4dbfc